# Backlit

./: .gitignore  AppDelegate.m  Podfile  README.md  Sane-build.rb  Sane.podspec  SaneSwift.podspec  cltools.sh  fastlane-record.rb  sane-backends-build-ios.rb  sane-backends-build-ios.sh  sane-backends-ios-crosscompiling.patch  sane-libs-build-ios.sh  swiftgen.yml
sane-backends-1.0.25/: ChangeLog-1.0.0  ChangeLog-1.0.1  ChangeLog-1.0.10  ChangeLog-1.0.12  ChangeLog-1.0.13  ChangeLog-1.0.14  ChangeLog-1.0.15  ChangeLog-1.0.16  ChangeLog-1.0.17  ChangeLog-1.0.18  ChangeLog-1.0.19  ChangeLog-1.0.2  ChangeLog-1.0.20  ChangeLog-1.0.21  ChangeLog-1.0.22  ChangeLog-1.0.23  ChangeLog-1.0.3  ChangeLog-1.0.4  ChangeLog-1.0.5  ChangeLog-1.0.6  ChangeLog-1.0.7  ChangeLog-1.0.8  ChangeLog-1.0.9  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  configure  configure.in  ltmain.sh  sane-backends.lsm
sane-backends-1.0.25/backend/: Makefile.am  Makefile.in  abaton.c  abaton.h  agfafocus.c  agfafocus.h  apple.c  apple.h  artec.c  artec.h  artec_eplus48u.c  artec_eplus48u.conf.in  artec_eplus48u.h  as6e.c  as6e.h  avision.c  avision.h  bh.c  bh.h  canon-sane.c  canon-scsi.c  canon.c  canon.h  canon630u-common.c  canon630u.c  canon_dr-cmd.h  canon_dr.c  canon_dr.conf.in  canon_dr.h  canon_pp-dev.c  canon_pp-dev.h  canon_pp-io.c  canon_pp-io.h  canon_pp.c  canon_pp.h  cardscan.c  cardscan.conf.in  cardscan.h  coolscan-scsidef.h  coolscan.c  (+412 more)
sane-backends-1.0.25/doc/: Makefile.am  Makefile.in  descriptions.txt  doxygen-genesys.conf.in  doxygen-sanei.conf.in  gamma4scanimage.man  html.sty  net.tex  releases.txt  sane-abaton.man  sane-agfafocus.man  sane-apple.man  sane-artec.man  sane-artec_eplus48u.man  sane-as6e.man  sane-avision.man  sane-bh.man  sane-canon.man  sane-canon630u.man  sane-canon_dr.man  sane-canon_pp.man  sane-cardscan.man  sane-config.man  sane-coolscan.man  sane-coolscan2.man  sane-coolscan3.man  sane-dc210.man  sane-dc240.man  sane-dc25.man  sane-dll.man  sane-dmc.man  sane-epjitsu.man  sane-epson.man  sane-epson2.man  sane-epsonds.man  sane-find-scanner.man  sane-fujitsu.man  sane-genesys.man  sane-gphoto2.man  sane-gt68xx.man  (+66 more)
sane-backends-1.0.25/doc/descriptions/: abaton.desc  agfafocus.desc  apple.desc  artec.desc  artec_eplus48u.desc  as6e.desc  avision.desc  bh.desc  canon.desc  canon630u.desc  canon_dr.desc  canon_pp.desc  cardscan.desc  coolscan.desc  coolscan2.desc  coolscan3.desc  dc210.desc  dc240.desc  dc25.desc  dell1600n_net.desc  dll.desc  dmc.desc  epjitsu.desc  epson.desc  epson2.desc  epsonds.desc  fujitsu.desc  genesys.desc  gphoto2.desc  gt68xx.desc  hp.desc  hp3500.desc  hp3900.desc  hp4200.desc  hp5400.desc  hp5590.desc  hpljm1005.desc  hpsj5s.desc  hs2p.desc  ibm.desc  (+52 more)
sane-backends-1.0.25/doc/descriptions-external/: brother-mfc4600.desc  brother.desc  brother2.desc  canon_mfp.desc  cs3200f.desc  epkowa.desc  geniusvp2.desc  hp3770.desc  hp8200.desc  hpaio.desc  hpoj.desc  kodak-twain.desc  lhii.desc  mustek_a3p1.desc  panamfs.desc  primascan.desc  primax.desc  samsung.desc  scanwit.desc  v4l2.desc  viceo.desc
sane-backends-1.0.25/doc/figs/: area.eps  area.fig  flow.eps  flow.fig  hierarchy.eps  hierarchy.fig  image-data.eps  image-data.fig  xfer.eps  xfer.fig
sane-backends-1.0.25/frontend/: Makefile.am  Makefile.in  saned.c  scanimage.c  stiff.c  stiff.h  test.c  tstbackend.c
sane-backends-1.0.25/include/: Makefile.am  Makefile.in  lalloca.h  lassert.h  lgetopt.h  md5.h
sane-backends-1.0.25/include/sane/: config.h.in  sanei.h  sanei_ab306.h  sanei_access.h  sanei_auth.h  sanei_backend.h  sanei_codec_ascii.h  sanei_codec_bin.h  sanei_config.h  sanei_debug.h  sanei_ir.h  sanei_jpeg.h  sanei_lm983x.h  sanei_magic.h  sanei_pa4s2.h  sanei_pp.h  sanei_pv8630.h  sanei_scsi.h  sanei_tcp.h  sanei_thread.h  sanei_udp.h  sanei_usb.h  sanei_wire.h
sane-backends-1.0.25/japi/: ImageCanvas.java  ImageCanvasClient.java  Jscanimage.java  Makefile.am  Makefile.in  README.JAVA  Sane.c  Sane.java  SaneDevice.java  SaneOption.java  SaneParameters.java  SaneRange.java  ScanIt.java  Test.java
sane-backends-1.0.25/lib/: Makefile.am  Makefile.in  alloca.c  getopt.c  getopt1.c  inet_ntop.c  inet_pton.c  md5.c  sigprocmask.c  sleep.c  snprintf.c  strcasestr.c  syslog.c  vsyslog.c
sane-backends-1.0.25/m4/: byteorder.m4
sane-backends-1.0.25/po/: LINGUAS  Makefile.am  Makefile.in  POTFILES  README  pl.po  sane-backends.pot
sane-backends-1.0.25/sanei/: Makefile.am  Makefile.in  linux_sg3_err.h  sanei_DomainOS.c  sanei_ab306.c  sanei_access.c  sanei_auth.c  sanei_codec_ascii.c  sanei_codec_bin.c  sanei_config.c  sanei_config2.c  sanei_constrain_value.c  sanei_init_debug.c  sanei_ir.c  sanei_jpeg.c  sanei_lm983x.c  sanei_magic.c  sanei_net.c  sanei_pa4s2.c  sanei_pio.c  sanei_pp.c  sanei_pv8630.c  sanei_scsi.c  sanei_tcp.c  sanei_thread.c  sanei_udp.c  sanei_usb.c  sanei_wire.c
sane-backends-1.0.25/testsuite/: Makefile.am  Makefile.in  README  testfile.pnm
sane-backends-1.0.25/testsuite/sanei/: Makefile.am  Makefile.in  README  sanei_check_test.c  sanei_config_test.c  sanei_constrain_test.c  sanei_usb_test.c  test_wire.c
sane-backends-1.0.25/testsuite/sanei/data/: boolean.conf  empty.conf  fixed.conf  int.conf  string-list.conf  string.conf  umax_pp.conf  word-array.conf  wrong-boolean.conf  wrong-fixed.conf  wrong-range.conf  wrong-string-list.conf
sane-backends-1.0.25/testsuite/tools/: Makefile.am  Makefile.in  README
sane-backends-1.0.25/testsuite/tools/data/: ascii.ref  db.ref  hal-new.ref  hal.ref  html-backends-split.ref  html-mfgs.ref  hwdb.ref  plist.ref  statistics.ref  testfile.desc  udev+acl.ref  udev+hwdb.ref  (+3 more)
sane-backends-1.0.25/tools/: Makefile.am  Makefile.in  README  RenSaneDlls.cmd  check-po.awk  check-usb-chip.c  gamma4scanimage.c  libtool-get-dll-ext  mustek600iin-off.c  sane-backends.pc.in  sane-config.in  sane-desc.c  sane-find-scanner.c  umax_pp.c
sane-backends-1.0.25/tools/hotplug/: README  libusbscanner
sane-backends-1.0.25/tools/hotplug-ng/: README  libsane.hotplug
sane-backends-1.0.25/tools/openbsd/: attach  detach
(+696 files in other folders)
