##  Makefile.am -- an automake template for Makefile.in file
##  Copyright (C) 2009 Chris Bagwell and Sane Developers.
##
##  This file is part of the "Sane" build infra-structure.  See
##  included LICENSE file for license information.

nobase_include_HEADERS = sane/sane.h sane/saneopts.h

EXTRA_DIST = lalloca.h lassert.h lgetopt.h md5.h font_6x11.h

EXTRA_DIST += sane/config.h.in sane/sanei.h sane/sanei_ab306.h \
  sane/sanei_access.h sane/sanei_auth.h sane/sanei_backend.h \
  sane/sanei_cderror.h sane/sanei_codec_ascii.h sane/sanei_codec_bin.h \
  sane/sanei_config.h sane/sanei_debug.h sane/sanei_jinclude.h \
  sane/sanei_jpeg.h sane/sanei_lm983x.h sane/sanei_net.h sane/sanei_pa4s2.h \
  sane/sanei_pio.h sane/sanei_pp.h sane/sanei_pv8630.h sane/sanei_scsi.h \
  sane/sanei_tcp.h sane/sanei_thread.h sane/sanei_udp.h sane/sanei_usb.h \
  sane/sanei_wire.h sane/sanei_magic.h sane/sanei_ir.h
